--- a/spring-boot/bookstore/src/main/resources/application.properties
+++ b/spring-boot/bookstore/src/main/resources/application.properties
@@ -1,2 +1,9 @@
 spring.application.name=bookstore
 springdoc.show-actuator=true
+server.port=8080
+spring.datasource.url=jdbc:h2:mem:bookstore-db;MODE=PostgreSQL;
+spring.h2.console.enabled=true
+spring.h2.console.path=/h2-console
+spring.h2.console.settings.web-allow-others=true
+spring.jpa.hibernate.ddl-auto=update
+management.endpoints.web.exposure.include=health,env,loggers
