--- a/spring-boot/bookstore/src/main/resources/application.properties
+++ b/spring-boot/bookstore/src/main/resources/application.properties
@@ -6,6 +6,8 @@ spring.h2.console.enabled=true
 spring.h2.console.path=/h2-console
 spring.h2.console.settings.web-allow-others=true
 spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=false
+spring.jpa.open-in-view=true
 spring.sql.init.mode=always
 spring.sql.init.platform=h2
-management.endpoints.web.exposure.include=health,env,loggers
+management.endpoints.web.exposure.include=health,env,loggers,modulith
