--- a/spring-boot/bookstore/src/main/resources/application.properties
+++ b/spring-boot/bookstore/src/main/resources/application.properties
@@ -10,4 +10,9 @@ spring.jpa.show-sql=false
 spring.jpa.open-in-view=true
 spring.sql.init.mode=always
 spring.sql.init.platform=h2
+#management.endpoints.web.exposure.include=*
 management.endpoints.web.exposure.include=health,env,loggers,modulith
+management.endpoint.env.show-values=ALWAYS
+management.tracing.sampling.probability=1.0
+management.tracing.enabled=false
+management.zipkin.tracing.endpoint=http://localhost:9411/api/v2/spans
