disabled ZipkinAutoConfiguration while executing tests

--- a/spring-boot/bookstore/src/test/resources/application-integration-test.properties
+++ b/spring-boot/bookstore/src/test/resources/application-integration-test.properties
@@ -2,3 +2,4 @@ spring.jpa.hibernate.ddl-auto=create-drop
 spring.sql.init.mode=never
 spring.datasource.driver-class-name=org.testcontainers.jdbc.ContainerDatabaseDriver
 spring.datasource.url=jdbc:tc:postgresql:16://localhost/bookstore?TC_DAEMON=true
+spring.autoconfigure.exclude=org.springframework.boot.actuate.autoconfigure.tracing.zipkin.ZipkinAutoConfiguration
