--- a/spring-boot/bookstore/src/test/resources/application-test.properties
+++ b/spring-boot/bookstore/src/test/resources/application-test.properties
@@ -1,2 +1,3 @@
 spring.jpa.hibernate.ddl-auto=create-drop
 spring.sql.init.mode=never
+spring.autoconfigure.exclude=org.springframework.boot.actuate.autoconfigure.tracing.zipkin.ZipkinAutoConfiguration
