added Dockerfile with support for Class Data Sharing (CDS)

--- a/spring-boot/bookstore/Dockerfile
+++ b/spring-boot/bookstore/Dockerfile
@@ -1,4 +1,5 @@
-FROM public.ecr.aws/docker/library/amazoncorretto:21-alpine as build
+FROM bellsoft/liberica-openjdk-alpine-musl:21-cds as build
+
 WORKDIR /workspace/app
 
 COPY mvnw .
@@ -7,12 +8,22 @@ COPY pom.xml .
 COPY src src
 
 RUN --mount=type=cache,target=/root/.m2 ./mvnw install -DskipTests
-RUN mkdir -p target/dependency && (cd target/dependency; jar -xf ../*.jar)
 
-FROM public.ecr.aws/docker/library/amazoncorretto:21-alpine
+ARG JAR_FILE=target/*.jar
+COPY ${JAR_FILE} application.jar
+
+RUN java -Djarmode=tools -jar application.jar extract --destination application
+WORKDIR /workspace/app/application
+RUN java -XX:ArchiveClassesAtExit=application.jsa -Dspring.context.exit=onRefresh -jar application.jar
+
+FROM bellsoft/liberica-openjdk-alpine-musl:21-cds
+
 VOLUME /tmp
-ARG DEPENDENCY=/workspace/app/target/dependency
-COPY --from=build ${DEPENDENCY}/BOOT-INF/lib /app/lib
-COPY --from=build ${DEPENDENCY}/META-INF /app/META-INF
-COPY --from=build ${DEPENDENCY}/BOOT-INF/classes /app
-ENTRYPOINT ["java","-cp","app:app/lib/*","com.makariev.examples.spring.bookstore.BookstoreApplication"]
+
+ARG DEPENDENCY=/workspace/app
+COPY --from=build ${DEPENDENCY}/application /app/application
+COPY --from=build ${DEPENDENCY}/application/application.jsa /app/application.jsa
+
+WORKDIR /app/application
+
+ENTRYPOINT ["java", "-XX:SharedArchiveFile=application.jsa", "-jar", "application.jar"]
