--- a/spring-boot/faces/pom.xml
+++ b/spring-boot/faces/pom.xml
@@ -16,7 +16,7 @@
     <properties>
         <java.version>21</java.version>
     </properties>
-<!--    <packaging>war</packaging>-->
+    <!--    <packaging>war</packaging>-->
     
     <dependencyManagement>
         <dependencies>
@@ -39,6 +39,10 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
         </dependency>
+        <!--        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-websocket</artifactId>
+        </dependency>-->
         <!--        
         <dependency>
             <groupId>org.joinfaces</groupId>
@@ -55,9 +59,26 @@
                 </exclusion>
             </exclusions>
         </dependency>
+                
         <dependency>
             <groupId>org.joinfaces</groupId>
             <artifactId>myfaces4-spring-boot-starter</artifactId>
+        </dependency>
+        
+        <!--        <dependency>
+            <groupId>org.joinfaces</groupId>
+            <artifactId>mojarra4-spring-boot-starter</artifactId>
+        </dependency>        -->
+        
+        <dependency>
+            <groupId>org.mvnpm</groupId>
+            <artifactId>simpledotcss</artifactId>
+            <version>2.3.1</version>
+        </dependency>
+        <dependency>
+            <groupId>org.webjars.npm</groupId>
+            <artifactId>picocss__pico</artifactId>
+            <version>2.0.6</version>
         </dependency>
 
         <dependency>
