--- a/spring-boot/faces/src/main/resources/application.properties
+++ b/spring-boot/faces/src/main/resources/application.properties
@@ -1,6 +1,7 @@
 spring.application.name=faces
 server.port=8080
 #spring.profiles.active=dev
+#server.servlet.context-path=/a
 
 management.endpoints.enabled-by-default=true
 management.endpoints.web.exposure.include=beans,env,health,mappings
