--- a/jbang/spring-boot-jpa-jsf/compose.yaml
+++ b/jbang/spring-boot-jpa-jsf/compose.yaml
@@ -13,6 +13,8 @@ services:
       - SPRING_JPA_HIBERNATE_DDL_AUTO=update
       - JOINFACES_FACES_SERVLET_ENABLED=true
       - JOINFACES_FACES_AUTOMATIC_EXTENSIONLESS_MAPPING=true
+      - SPRING_H2_CONSOLE_ENABLED=true
+      - SPRING_H2_CONSOLE_SETTINGS_WEB_ALLOW_OTHERS=true
     networks:
       - spring-postgres
   db:
@@ -25,6 +27,10 @@ services:
     environment:
       - POSTGRES_DB=example
       - POSTGRES_PASSWORD=pass-example
+      - PGADMIN_DEFAULT_EMAIL=admin_not_used@user.com
+      - PGADMIN_DEFAULT_PASSWORD=admin_not_used
+      - PGADMIN_CONFIG_SERVER_MODE="False"
+      - PGADMIN_CONFIG_MASTER_PASSWORD_REQUIRED="False"
     expose:
       - 5432
   pgadmin:
