added enhance profile to build step in dockerfile

--- a/spring-boot/bookstore/src/main/resources/application.properties
+++ b/spring-boot/bookstore/src/main/resources/application.properties
@@ -1,4 +1,5 @@
 spring.application.name=bookstore
+spring.threads.virtual.enabled=true
 springdoc.show-actuator=true
 server.port=8080
 spring.datasource.url=jdbc:h2:mem:bookstore-db;MODE=PostgreSQL;
