crud-htmx - upgraded spring boot to 3.3.1, cleanup in Dockerfiles

--- a/spring-boot/crud-htmx/Dockerfile
+++ b/spring-boot/crud-htmx/Dockerfile
@@ -6,7 +6,7 @@ COPY .mvn .mvn
 COPY pom.xml .
 COPY src src
 
-RUN --mount=type=cache,target=/root/.m2 ./mvnw install -DskipTests
+RUN --mount=type=cache,target=/root/.m2 ./mvnw clean package -DskipTests
 RUN mkdir -p target/dependency && (cd target/dependency; jar -xf ../*.jar)
 
 FROM ghcr.io/bell-sw/liberica-openjdk-alpine-musl:22
