added spring session and CDS to jbang spring boot compare example

--- a/jbang/spring-boot-compare/Dockerfile
+++ b/jbang/spring-boot-compare/Dockerfile
@@ -1,4 +1,4 @@
-FROM public.ecr.aws/docker/library/amazoncorretto:22-alpine AS build
+FROM ghcr.io/bell-sw/liberica-openjdk-alpine-musl:22  AS build
 
 RUN apk --no-cache add bash
 RUN apk --no-cache add curl
@@ -8,7 +8,7 @@ COPY . /app
 
 RUN --mount=type=cache,target=/root/.m2 curl -Ls https://sh.jbang.dev | bash -s - export portable springbootCompare.java
 
-FROM public.ecr.aws/docker/library/amazoncorretto:22-alpine
+FROM ghcr.io/bell-sw/liberica-openjdk-alpine-musl:22 
 RUN mkdir /app/
 RUN mkdir /app/lib
 COPY --from=build /app/springbootCompare.jar /app/springbootCompare.jar
