--- a/spring-boot/crud-htmx-daisyui/pom.xml
+++ b/spring-boot/crud-htmx-daisyui/pom.xml
@@ -49,8 +49,13 @@
         </dependency>
         <dependency>
             <groupId>org.webjars.npm</groupId>
-            <artifactId>github-com-bigskysoftware-htmx</artifactId>
-            <version>1.9.12</version>
+            <artifactId>htmx.org</artifactId>
+            <version>2.0.0</version>
+        </dependency>
+        <dependency>
+            <groupId>org.webjars.npm</groupId>
+            <artifactId>shoelace-style__shoelace</artifactId>
+            <version>2.15.1</version>
         </dependency>
         <dependency>
             <groupId>org.mvnpm</groupId>
