--- a/spring-boot/bookstore/compose-cds.yaml
+++ b/spring-boot/bookstore/compose-cds.yaml
@@ -40,7 +40,7 @@ services:
       - 5432
   pgadmin:
     container_name: bookstore-pgadmin
-    image: dpage/pgadmin4:8.14
+    image: dpage/pgadmin4:9.2.0
     environment:
       PGADMIN_DEFAULT_EMAIL: admin_not_used@user.com
       PGADMIN_DEFAULT_PASSWORD: admin_not_used
@@ -55,7 +55,7 @@ services:
     restart: always
   zipkin:
     container_name: zipkin
-    image: openzipkin/zipkin
+    image: openzipkin/zipkin:3
     extra_hosts: [ 'host.docker.internal:host-gateway' ]
     ports:
       - "9411:9411"
