--- a/spring-boot/bookstore/config/deploy.yml
+++ b/spring-boot/bookstore/config/deploy.yml
@@ -52,7 +52,7 @@ accessories:
     volumes:
       - bookstore-db-data:/var/lib/postgresql/data
   pgadmin:
-    image: dpage/pgadmin4:8.14
+    image: dpage/pgadmin4:9.2.0
     host: 192.168.67.10
     port: "5050:80"
     env:
@@ -64,7 +64,7 @@ accessories:
     volumes:
       - bookstore-pgadmin:/var/lib/pgadmin
   zipkin:
-    image: openzipkin/zipkin
+    image: openzipkin/zipkin:3
     host: 192.168.67.10
     port: "9411:9411"
 
