--- a/spring-boot/bookstore/pom.xml
+++ b/spring-boot/bookstore/pom.xml
@@ -71,6 +71,10 @@
         <dependency>
             <groupId>io.opentelemetry</groupId>
             <artifactId>opentelemetry-exporter-zipkin</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>io.micrometer</groupId>
+            <artifactId>micrometer-registry-prometheus</artifactId>
         </dependency>    
 
         <dependency>
