--- a/spring-boot/bookstore/src/main/resources/application.properties
+++ b/spring-boot/bookstore/src/main/resources/application.properties
@@ -12,7 +12,7 @@ spring.jpa.open-in-view=true
 spring.sql.init.mode=always
 spring.sql.init.platform=h2
 #management.endpoints.web.exposure.include=*
-management.endpoints.web.exposure.include=health,env,loggers,modulith
+management.endpoints.web.exposure.include=health,env,loggers,modulith,prometheus
 management.endpoint.env.show-values=ALWAYS
 management.tracing.sampling.probability=1.0
 management.tracing.enabled=false
