--- a/spring-boot/bookstore/pom.xml
+++ b/spring-boot/bookstore/pom.xml
@@ -5,12 +5,12 @@
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>3.4.5</version>
+        <version>3.5.0</version>
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
     <groupId>com.makariev.examples.spring</groupId>
     <artifactId>bookstore</artifactId>
-    <version>0.0.1-SNAPSHOT</version>
+    <version>0.0.2-SNAPSHOT</version>
     <name>bookstore</name>
     <description>Bookstore example</description>
     <properties>
@@ -45,7 +45,7 @@
         <dependency>
             <groupId>org.springdoc</groupId>
             <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
-            <version>2.8.6</version>
+            <version>2.8.8</version>
         </dependency>
         
         <!-- -->
@@ -170,10 +170,11 @@
                     <plugin>
                         <groupId>org.asciidoctor</groupId>
                         <artifactId>asciidoctor-maven-plugin</artifactId>
-                        <version>3.1.1</version>
+                        <version>3.2.0</version>
                         <executions>
+                            <!-- HTML Output -->
                             <execution>
-                                <id>generate-docs</id>
+                                <id>generate-html</id>
                                 <phase>prepare-package</phase>
                                 <goals>
                                     <goal>process-asciidoc</goal>
@@ -184,14 +185,37 @@
                                     <requires>
                                         <require>asciidoctor-diagram</require>
                                     </requires>
+                                    <outputDirectory>${project.build.directory}/docs/html</outputDirectory>
                                 </configuration>
                             </execution>
+                            <!-- PDF Output -->
+                            <execution>
+                                <id>generate-pdf</id>
+                                <phase>prepare-package</phase>
+                                <goals>
+                                    <goal>process-asciidoc</goal>
+                                </goals>
+                                <configuration>
+                                    <backend>pdf</backend>
+                                    <doctype>book</doctype>
+                                    <requires>
+                                        <require>asciidoctor-diagram</require>
+                                        <require>asciidoctor-pdf</require>
+                                    </requires>
+                                    <outputDirectory>${project.build.directory}/docs/pdf</outputDirectory>
+                                </configuration>
+                            </execution>                            
                         </executions>
                         <dependencies>
                             <dependency>
                                 <groupId>org.asciidoctor</groupId>
                                 <artifactId>asciidoctorj-diagram</artifactId>
-                                <version>2.3.1</version>
+                                <version>2.3.2</version>
+                            </dependency>
+                            <dependency>
+                                <groupId>org.asciidoctor</groupId>
+                                <artifactId>asciidoctorj-pdf</artifactId>
+                                <version>2.3.19</version>
                             </dependency>
                         </dependencies>
                     </plugin>
@@ -205,7 +229,7 @@
                     <plugin>
                         <groupId>org.jacoco</groupId>
                         <artifactId>jacoco-maven-plugin</artifactId>
-                        <version>0.8.12</version>
+                        <version>0.8.13</version>
                         <executions>
                             <execution>
                                 <id>prepare-agent</id>
