--- a/spring-boot/bookstore/src/main/resources/application.properties
+++ b/spring-boot/bookstore/src/main/resources/application.properties
@@ -1,4 +1,5 @@
 spring.application.name=bookstore
+api.version=@project.version@
 spring.threads.virtual.enabled=true
 springdoc.show-actuator=true
 server.port=8080
@@ -12,7 +13,7 @@ spring.jpa.open-in-view=true
 spring.sql.init.mode=always
 spring.sql.init.platform=h2
 #management.endpoints.web.exposure.include=*
-management.endpoints.web.exposure.include=health,env,loggers,modulith,prometheus
+management.endpoints.web.exposure.include=health,env,loggers,modulith,prometheus,info
 management.endpoint.env.show-values=ALWAYS
 management.tracing.sampling.probability=1.0
 management.tracing.enabled=false
