updated spring boot to 3.5.6, upgraded dockerfiles to jdk 25

--- a/spring-boot/bookstore/Dockerfile
+++ b/spring-boot/bookstore/Dockerfile
@@ -1,4 +1,4 @@
-FROM ghcr.io/bell-sw/liberica-openjdk-alpine-musl:21 AS build
+FROM ghcr.io/bell-sw/liberica-openjdk-alpine-musl:25 AS build
 WORKDIR /workspace/app
 
 COPY mvnw .
@@ -9,11 +9,11 @@ COPY src src
 RUN --mount=type=cache,target=/root/.m2 ./mvnw install -DskipTests -Penhance
 RUN mkdir -p target/dependency && (cd target/dependency; jar -xf ../*.jar)
 
-FROM ghcr.io/bell-sw/liberica-openjdk-alpine-musl:21
+FROM ghcr.io/bell-sw/liberica-openjdk-alpine-musl:25
 LABEL service="bookstore"
 VOLUME /tmp
 ARG DEPENDENCY=/workspace/app/target/dependency
 COPY --from=build ${DEPENDENCY}/BOOT-INF/lib /app/lib
 COPY --from=build ${DEPENDENCY}/META-INF /app/META-INF
 COPY --from=build ${DEPENDENCY}/BOOT-INF/classes /app
-ENTRYPOINT ["java","-cp","app:app/lib/*","com.makariev.examples.spring.bookstore.BookstoreApplication"]
+ENTRYPOINT ["java","-XX:+UseCompactObjectHeaders","-cp","app:app/lib/*","com.makariev.examples.spring.bookstore.BookstoreApplication"]
