--- a/spring-boot/bookstore/Dockerfile.aws
+++ b/spring-boot/bookstore/Dockerfile.aws
@@ -1,4 +1,4 @@
-FROM public.ecr.aws/docker/library/amazoncorretto:21-alpine as build
+FROM public.ecr.aws/docker/library/amazoncorretto:25-alpine AS build
 WORKDIR /workspace/app
 
 COPY mvnw .
@@ -9,10 +9,10 @@ COPY src src
 RUN --mount=type=cache,target=/root/.m2 ./mvnw install -DskipTests
 RUN mkdir -p target/dependency && (cd target/dependency; jar -xf ../*.jar)
 
-FROM public.ecr.aws/docker/library/amazoncorretto:21-alpine
+FROM public.ecr.aws/docker/library/amazoncorretto:25-alpine
 VOLUME /tmp
 ARG DEPENDENCY=/workspace/app/target/dependency
 COPY --from=build ${DEPENDENCY}/BOOT-INF/lib /app/lib
 COPY --from=build ${DEPENDENCY}/META-INF /app/META-INF
 COPY --from=build ${DEPENDENCY}/BOOT-INF/classes /app
-ENTRYPOINT ["java","-cp","app:app/lib/*","com.makariev.examples.spring.bookstore.BookstoreApplication"]
+ENTRYPOINT ["java","-XX:+UseCompactObjectHeaders","-cp","app:app/lib/*","com.makariev.examples.spring.bookstore.BookstoreApplication"]
